--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "@tailwindcss/forms": "^0.3.3",
+        "alpinejs": "^3.2.4",
+        "autoprefixer": "^10.3.3",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    },
-    "dependencies": {
-        "alpinejs": "^3.2.4"
+        "postcss": "^8.3.6",
+        "tailwindcss": "^2.2.9"
     }
 }
