--- a/.env.testing
+++ b/.env.testing
@@ -8,12 +8,7 @@ APP_EMAIL_DOMAIN=gmail.com
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=itam
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
