--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "autoprefixer": "^10.3.3",
         "laravel-mix": "^6.0.6",
         "postcss": "^8.3.6",
+        "postcss-import": "^14.0.2",
         "tailwindcss": "^2.2.9"
     }
 }
