--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=base64:f74Bry/er6p1SA+GHaN+1mzoHMEFP0/Z4YgVSHK1KHE=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_EMAIL_DOMAIN=gmail.com
+APP_FORCE_HTTPS=false
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
