--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "calebporzio/sushi": "^2.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
+        "laravel/scout": "^9.2",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "meilisearch/meilisearch-php": "^0.19.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -23,13 +28,18 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
+        "pestphp/pest": "^1.18",
+        "pestphp/pest-plugin-laravel": "^1.1",
+        "pestphp/pest-plugin-livewire": "^1.0",
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Domain\\": "app/Domain",
+            "Support\\": "app/Support"
         }
     },
     "autoload-dev": {
