--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME=ITAM
 APP_ENV=local
 APP_KEY=base64:f74Bry/er6p1SA+GHaN+1mzoHMEFP0/Z4YgVSHK1KHE=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_EMAIL_DOMAIN=gmail.com
+APP_URL=http://itam.test
+APP_EMAIL_DOMAIN=itam.test
 APP_FORCE_HTTPS=false
 
 LOG_CHANNEL=stack
